added basic files

--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
     <title>repl.it</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
-  <body>
-    <script src="script.js"></script>
+  <body  id="body">
+    <!-- Heading -->
+
+<h1> i am heading</h1>
+<h2>you have to click on the button to change the page background color </h2>
+
+<button id="red">red</button>
+<button id="green">green</button>
+<button id="orange">orange</button>
+<p id="text"></p>
+<script src="script.js"></script>
   </body>
 </html>
